# Vessel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  run.sh  vessel_valuation.db
.cursor/rules/: general_code_guidelines.mdc  python.mdc
app/: callbacks.py  cashflow_display.py  component_ids.py  form_defaults.py  form_formatting.py  layout.py  main.py  serialization.py  table_styles.py
app/assets/: style.css
app/callbacks/: __init__.py  _debug_log.py  _helpers.py  catalog.py  compute.py  persistence.py  render.py  upload.py
app/views/: calculation.py  compare.py  investment.py
data/source/: Interview Case Study - Finance Solution Developer - Model.xlsx
docs/: architecture.md  assumptions.md  decisions.md  handoff.md  writeup.md
docs/case_study/: Interview Case Study - Finance Solution Developer - Model.xlsx
scripts/: docker-entrypoint.sh
src/vessel_valuation/: __init__.py  case_study_benchmarks.py  config.py  dcf.py  excel_reference.py  file_parser.py  insights.py  mapping.py  model.py  schema.py  serialize.py  validation.py
src/vessel_valuation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vessel_valuation/data/: case_study_pp_teu_benchmarks.json
src/vessel_valuation/db/: __init__.py  connection.py  migrate.py  models.py  repository.py
src/vessel_valuation/db/migrations/: env.py
src/vessel_valuation/db/migrations/versions/: 9f2b93443d45_initial_schema.py
src/vessel_valuation/decision_insights/: __init__.py  breakeven.py  enrich.py  scenario_analysis.py  scenario_bundles.py  scenario_schedules.py  sensitivity.py
src/vessel_valuation/validation/: __init__.py  business_rules.py  coercion.py  structural_rules.py  types.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_repository.py
tests/integration/vessel_valuation/db/: test_repository.py
tests/unit/: test_case_study_workbook.py  test_dcf.py  test_file_parser.py  test_insights.py  test_mapping.py  test_normalize_vessel_input_ids.py  test_saved_vessel_label.py  test_teu_bucket.py  test_validation.py  test_validation_pp_teu_factor.py  test_valuation.py
tests/unit/app/: test_form_formatting.py
tests/unit/app/callbacks/: test__helpers.py  test_compute_form.py
tests/unit/app/views/: test_calculation.py  test_compare.py  test_investment.py
tests/unit/decision_insights/: conftest.py  test_breakeven.py  test_enrich.py  test_scenario_analysis.py  test_scenario_schedules.py  test_sensitivity.py
tests/unit/validation/: test_business_rules.py  test_structural_rules.py
tests/unit/vessel_valuation/: conftest.py  test_case_study_benchmarks.py  test_config.py  test_dcf.py  test_excel_reference.py  test_file_parser.py  test_mapping.py  test_purchase_price_scenarios.py  test_serialize.py  test_validation.py
tests/unit/vessel_valuation/db/: test_migrate.py  test_models.py
tests/unit/vessel_valuation/decision_insights/: conftest.py  test_breakeven.py  test_enrich.py  test_scenario_analysis.py  test_scenario_bundles.py  test_scenario_schedules.py  test_sensitivity.py
tests/unit/vessel_valuation/validation/: conftest.py  test_business_rules.py  test_coercion.py  test_structural_rules.py  test_validate.py
