[project]
name = 'vessel-valuation'
version = '0.1.0'
description = 'Welles vessel DCF valuation (interview case study)'
requires-python = '>=3.14,<3.15'
dependencies = [
    'scipy>=1.17.1',
    'dash>=4.2.0',
    'plotly>=6.7.0',
    'sqlalchemy>=2.0.50',
    'alembic>=1.18.4',
    'python-dotenv>=1.2.2',
    'pandas>=3.0.3',
    'openpyxl>=3.1.5',
]

[dependency-groups]
dev = [
    'pytest>=9.0.3',
    'autopep8>=2.3.2',
    'ruff>=0.15.15',
    'ty>=0.0.40',
    'pandas-stubs>=3.0.3.260530',
]

[tool.uv]
default-groups = ['dev']

[build-system]
requires = ['setuptools>=82.0.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
vessel_valuation = ['data/*.json']

[tool.pytest.ini_options]
pythonpath = ['src']
testpaths = ['tests']
addopts = '-rs --tb=short'

[tool.autopep8]
max_line_length = 120
aggressive = 1

[tool.ty.src]
include = ['src', 'tests', 'app']

[tool.ty.rules]
unused-ignore-comment = 'warn'

[tool.ty.terminal]
output-format = 'concise'

[tool.ruff]
cache-dir = '~/.cache/ruff'
line-length = 120
target-version = 'py314'
unsafe-fixes = true
output-format = 'concise'
exclude = [
    'docs/*',
    'build',
    'dist',
    '.venv/**',
    '**/*.egg-info/**',
]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = [
    'E',
    'F',
    'B',
    'D',
    'N',
    'UP',
    'T20',
    'PTH',
    'PD',
    'PGH',
    'TC',
    'ANN',
    'RET',
    'SIM',
    'Q',
    'C4',
    'TRY',
    'DJ',
    'PLC0415',
]
ignore = [
    'E712',
    'E713',
    'E714',
    'E722',
    'E731',
    'F405',
    'F841',
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'D105',
    'D106',
    'D200',
    'D202',
    'D204',
    'D205',
    'D301',
    'D400',
    'D401',
    'D415',
    'ANN002',
    'ANN003',
    'RET503',
    'RET505',
    'PD003',
    'PD004',
    'PD011',
    'PD013',
    'PLR5501',
    'PLR2004',
    'PGH003',
    'N817',
    'SIM201',
    'SIM108',
    'SIM118',
    'SIM300',
    'Q003',
    'C408',
    'C420',
    'TRY003',
    'TRY201',
    'TRY300',
    'TRY400',
    'DJ001',
    'UP039',
    'TC003',
]

[tool.ruff.lint.per-file-ignores]
# Test module docstrings: run command + description (numpy D400/D205 not applied).
'tests/**/*.py' = ['D400', 'D205', 'ANN001']
# Dev server entry point: user-facing startup hints on stdout.
'app/main.py' = ['T20']

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = [
    'pydantic.BaseModel',
    'pydantic_settings.BaseSettings',
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ['vessel_valuation', 'app']
